@@ -35,6 +35,7 @@
 - default to max number of processors (--vips-concurrency and IM_CONCURRENCY
   set >0 can override) on linux and win32
 - better nprocs guesser
+- im_render() fixes to help the paintbox, some speedups too
 
 15/1/10 started 7.21.1
 - added "written" callbacks, used to implement write to non-vips formats
